css/retry-timeout.css
/*******************************************************************************
 * Copyright (c) 2018 IBM Corporation and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *     IBM Corporation - initial API and implementation
 *******************************************************************************/
#guide_content .codeeditor .CodeMirror {
    height: 100%;
    border-bottom: none;
 }
 
.codeeditor {
    height: 100%;
    overflow: auto;
    border-bottom: 1px solid black;
}

/** CSS for the dashboard **/
.dashboardHolder {
    position: relative;
    width: 100%;
    height: 75px;
    left: 0;
    top: 0;
}

.timeline {
    display: flex;
/*    justify-content: space-between; */
    align-items: center;
    flex-direction: column;
    position: relative;
    height: 75px;
    padding-bottom: 10px;
}

.progressBar {
    width: 85%;
    height: 9px;
    border-radius: 10px;
    position: relative;
    border: 1px solid black;
    z-index: 1;
}

.progressBar div {
    height: 100%;
    background-color: steelblue;
    border-radius: 10px;
    overflow: hidden;
    width: 0%;
}

.legendText {
    width: 100%;
    line-height: 12px;
    font-weight: 500;
}

.legendTextTop {
    margin-bottom: 5px;
}

.legendTextBottom {
    margin-top: 5px;
}

.timelineContainer {
    width: 100%;
    position: relative;
    height: 14px;
}

.tickContainer {
    position: absolute;
    width: 85%;
    height: 10px;
   /* bottom: 0; or top:0; -- Only needed if ticks are < 14px */
    margin-left: 7.5%
}

.timelineTick {
    height: 14px;
    width: 3px;
    position: absolute;
}

.timeoutTick {
    border-radius: 10px 10px 0 0;
    background-image: linear-gradient(180deg, rgb(204, 0, 0) 0%, rgb(204, 0, 0) 47%, rgb(180, 1, 1) 48%, rgb(180, 1, 1) 100%);
    left: 3px;  /* 3px to line up with start of progress line; otherwise use a percentage; */
}

.retryTick {
    border-radius: 0 0 10px 10px;
    background-image: linear-gradient(180deg, rgb(102, 153, 0) 0%, rgb(102, 153, 0) 47%, rgb(118, 177, 1) 48%, rgb(118, 177, 1) 100%);
    left: 10%;
    margin-top: -1.5px;
}

.timelineLabel {
    position: absolute;
    font-size: 10px;
    text-align: right;
    line-height: 12px;
} 

.timeoutLabel {
    color: rgb(180,1,1);
}

.retryLabel {
    color: rgb(85,128,0);
}

.timelineLegend {
    line-height: 14px;
    position: absolute;
    font-size: 12px;
}

.timelineLegendStart {
    left: 4%;
}

.timelineLegendEnd {
    left: 94%;
}

